<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:transitionName="@string/transition_title"
            tools:text="This is a title!"/>

        <TextView
            android:id="@+id/txtDetailDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:transitionName="@string/transition_desc"
            tools:text="This is a description!"/>

        <TextView
            android:id="@+id/txtDetailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:transitionName="@string/transition_price"
            tools:text="This is a price!"/>

        <TextView
            android:id="@+id/txtDetailLongDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            tools:text="@string/lorem_ipsum"/>

        <Button
            android:id="@+id/btnDetailBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/button_detail_buy"
            android:textColor="@android:color/white"/>


    </LinearLayout>

</android.support.v7.widget.CardView>